--- a/lang/arch-installer-romanian.conf
+++ b/lang/arch-installer-romanian.conf
@@ -461,7 +461,7 @@ zone_load_var2="Setare fus orar $ZONE..."
 ### DO NOT EDIT BELOW THIS LINE!
 #########################################################################
 
-if [ "$reload" == "set" ]; then
+if "$reload" ; then
 	var_msg
 	load_var_msg
 else
